data/derived/sp14/progs/unify/prog0474.ml.out
Characters 43-50:
  if n > 0 then x::clone(x n-1)
                        ^^^^^^^
Error: This expression has type int but an expression was expected of type
         int -> int
